<resources>
    <string name="app_name">Short Stories</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="i_accept_terms">I accept terms and conditions</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="enter_title">Enter Title here</string>
    <string name="enter_sub_title">Enter Sub-Title here</string>
    <string name="enter_description">Enter Description</string>
    <string name="add_story">Add Story</string>

    <string name="story1_title">first story</string>
    <string name="story1_subtitle">subtitle</string>
    <string name="story1_desc"> hello</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>